WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102465
[WK2] Bug on ASSERT code in CoordinatedBackingStore.cpp
https://bugs.webkit.org/show_bug.cgi?id=102465
Summary
[WK2] Bug on ASSERT code in CoordinatedBackingStore.cpp
KyungTae Kim
Reported
2012-11-15 23:31:48 PST
There's build error on Debug build on the ASSERT code in CoordinatedBackingStore.cpp (regression from
https://bugs.webkit.org/show_bug.cgi?id=101023
) because the ‘operator>=’ is not defined for WebCore::IntSize. Source/WebKit2/UIProcess/CoordinatedGraphics/CoordinatedBackingStore.cpp:52:105: error: no match for ‘operator>=’ in ‘textureMapper->WebCore::TextureMapper::maxTextureSize() >= std::max [with _Tp = int]((* &((WebKit::CoordinatedBackingStoreTile*)this)->WebKit::CoordinatedBackingStoreTile::m_tileRect.WebCore::IntRect::size().WebCore::IntSize::width()), (* &((WebKit::CoordinatedBackingStoreTile*)this)->WebKit::CoordinatedBackingStoreTile::m_tileRect.WebCore::IntRect::size().WebCore::IntSize::height()))’
Attachments
Patch
(1.80 KB, patch)
2012-11-15 23:36 PST
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
Patch
(1.80 KB, patch)
2012-11-15 23:38 PST
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2012-11-16 00:02 PST
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
KyungTae Kim
Comment 1
2012-11-15 23:36:03 PST
Created
attachment 174613
[details]
Patch
KyungTae Kim
Comment 2
2012-11-15 23:38:47 PST
Created
attachment 174616
[details]
Patch
Daniel Bates
Comment 3
2012-11-15 23:48:48 PST
Comment on
attachment 174616
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=174616&action=review
> Source/WebKit2/UIProcess/CoordinatedGraphics/CoordinatedBackingStore.cpp:52 > + ASSERT(textureMapper->maxTextureSize().width() >= m_tileRect.size().width() && textureMapper->maxTextureSize().height() >= m_tileRect.size().height());
Nit: There are two space characters before the "&&".
KyungTae Kim
Comment 4
2012-11-16 00:02:10 PST
Created
attachment 174618
[details]
Patch
Csaba Osztrogonác
Comment 5
2012-11-16 00:23:39 PST
Comment on
attachment 174618
[details]
Patch Clearing flags on attachment: 174618 Committed
r134912
: <
http://trac.webkit.org/changeset/134912
>
Csaba Osztrogonác
Comment 6
2012-11-16 00:23:45 PST
All reviewed patches have been landed. Closing bug.
Dongseong Hwang
Comment 7
2012-11-16 01:18:13 PST
Thank you for fixing. I really appreciate!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug