[WK2] Bug on ASSERT code in CoordinatedBackingStore.cpp https://bugs.webkit.org/show_bug.cgi?id=102465

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-11-16
Reviewed by Noam Rosenthal.

The ASSERT code should be fixed because the 'operator>=' is not defined for WebCore::IntSize.

* UIProcess/CoordinatedGraphics/CoordinatedBackingStore.cpp:
(WebKit::CoordinatedBackingStoreTile::swapBuffers):

Canonical link: https://commits.webkit.org/120604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134912 268f45cc-cd09-0410-ab3c-d52691b4dbfc